@@ -1,5 +1,13 @@
 2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/data/statistics/DefaultBoxAndWhiskerXYDataset.java
+	(add): Fire dataset change event,
+	(getY): Removed redundant constructor call,
+	(equals): New method override,
+	(clone): Likewise.
+
+2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/plot/XYPlot.java
 	(equals): Added check for domain/rangeTickBandPaint,
 	* source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
